[project]
name = "sex_educator"
version = "0.1.0"
description = "sex_educator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0"
]

[project.scripts]
sex_educator = "sex_educator.main:run"
run_crew = "sex_educator.main:run"
train = "sex_educator.main:train"
replay = "sex_educator.main:replay"
test = "sex_educator.main:test"
chat = "sex_educator.main:chat"
web = "sex_educator.main:web"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
